--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">AMS-BCC</string>
+    <string name="storage_access_required">This app requires your memory access to read excel-sheet files</string>
+    <string name="storage_access_denied">Please goto app settings and grant memory permission. </string>
+
+    <string name="storage_unavailable">Your device does not support storage</string>
 </resources>
